The following list contains all changes to pgAdmin3, as present in cvs. 
<ul>
<li>A version number denotes the release version, which contains the patch or feature mentioned.
<li>*** marks fixes that are backported to stable branch, and will be included in the next maintenance release.
<li>Unmarked fixes are experimental and are contained in snapshots only.
</ul>
<br>
<ul>
    <li>2004-10-22 AP  1.2B4 fix Edit Tool to store data when selecting a row (r: Virgil Frum)
    <li>2004-10-22 AP  1.2B4 fix Query Tool which marked text as changed when scrolling (r: Gary Doades)
    <li>2004-10-22 AP  1.2B4 Workaround for wxMSW-2.5.3 malfunctioning combobox (r: Gary Doades)
    <li>2004-10-22 AP  1.2B4 fix Query Tool recent menu (r: Gary Doades)
    <li>2004-10-22 AP  1.2B4 fix column type change sql (r: Ben Trewern)
    <li>2004-10-21 AP  1.2B4 fix SET DEFAULT FK restriction (r: Ferenc from Hungary)
    <li>2004-10-21 AP  1.2B4 refresh fixes when modifying object from collection list
    <li>2004-10-21 AP  1.2B4 sequence fixes
    <li>2004-10-16 AP  1.2B3 use wxWidgets 2.5.3
    <li>2004-10-15 AP  1.2B3 change unsigned conversion for oids (r: Richard van den Berg, Patrick Hatcher)
    <li>2004-10-14 AP  1.2B3 Prevent StatusBar from being overwritten by Toolbar (r: Virgil Frum)
    <li>2004-10-13 AP  1.2B3 Connect to databases with special names (r: Frank Lupo)
    <li>2004-10-08 AP  1.2B3 review object owner code regarding pgsql versions
    <li>2004-10-08 AP  1.2B3 remove maximize button on MSW
    <li>2004-10-07 AP  1.2B3 Fix new server ssl option duplication on connect failure (r: Alexander Borkowski)
    <li>2004-10-06 AP  1.2B3 Fix cast property crash (r: Alexander Borkowski)
    <li>2004-10-05 AP  1.2B3 Use PostgreSQL's list of keywords for syntax highlighting
    <li>2004-10-05 AP  1.2B3 Fix adding columns with constraints using table properties on 7.3 and 7.4 (r: teknokrat, Virgil Frum)