@@ -17,6 +17,10 @@ The following list contains all changes to pgAdmin3, as present in cvs.
 </ul>
 <br>
 <ul>
+    <li>2004-10-27 AP  1.2B4 Workaround for wxGrid bug not returning selected rows
+    <li>2004-10-27 AP  1.2B4 Fix user/group selection in privileges (r: Walter Haslbeck, Gary Doades)
+    <li>2004-10-27 AP  1.2B4 Fix refresh when dropping single object from collection listview
+    <li>2004-10-26 AP  1.2B4 fix $$ translation problem (r: Miha Radej)
     <li>2004-10-22 AP  1.2B4 fix Edit Tool to store data when selecting a row (r: Virgil Frum)
     <li>2004-10-22 AP  1.2B4 fix Query Tool which marked text as changed when scrolling (r: Gary Doades)
     <li>2004-10-22 AP  1.2B4 Workaround for wxMSW-2.5.3 malfunctioning combobox (r: Gary Doades)
